--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/lucasfloro/spotify-wrapper/issues"
   },
-  "homepage": "https://github.com/lucasfloro/spotify-wrapper#readme"
+  "homepage": "https://github.com/lucasfloro/spotify-wrapper#readme",
+  "dependencies": {
+    "gitignore": "^0.6.0"
+  }
 }
