--- a/package.json
+++ b/package.json
@@ -31,6 +31,10 @@
     "eslint": "^5.9.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.14.0",
-    "mocha": "^5.2.0"
+    "mocha": "^5.2.0",
+    "node-fetch": "^2.3.0",
+    "sinon": "^7.1.1",
+    "sinon-chai": "^3.2.0",
+    "sinon-stub-promise": "^4.0.0"
   }
 }
